--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
             "email": "1225000209@qq.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=7.0",
+    },
+    "autoload": {
+        "psr-4": {
+            "Tools\\Picture\\" : ""
+        }
+    }
 }
