--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tools/picture",
+    "name": "tool/picture",
     "description": "图片处理函数",
     "type": "library",
     "authors": [
